# poetry-fastapi-todo

./: .gitignore  OVERVIEW.md  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
alembic/: env.py
alembic/versions/: a1bd9fb6285a_.py
src/: cli.py
src/agents/todo-assistant/: agent.py
src/models/: __init__.py  todo_item.py
src/scripts/: seed_data.py
src/tests/: conftest.py  factories.py  test_todoitems.py
src/todos/: __init__.py  config.py  main.py
src/todos/api/: main.py
src/todos/api/controllers/: todo_items_controller.py
src/todos/api/dtos/: agents_dto.py  todo_items_dto.py
src/todos/api/services/: todo_items_service.py
src/todos/db/: session.py
src/todos/mcp/: todo_items_mcp.py
src/todos/plugins/: alembic_plugin.py
